--- a/scripts.d/wp.conf
+++ b/scripts.d/wp.conf
@@ -1,16 +1,16 @@
-DocumentRoot /opt/wordpress
+DocumentRoot /wordpress
 DirectoryIndex index.html index.php
 <FilesMatch \.php$>
     SetHandler application/x-httpd-php
 </FilesMatch>
 AddType text/html .php
 php_value session.save_handler "files"
-php_value session.save_path    "/opt/wordpress/phpsessions"
+php_value session.save_path    "/wordpress/phpsessions"
 <Directory />
 	Options FollowSymLinks
 	AllowOverride None
 </Directory>
-<Directory /opt/wordpress>
+<Directory /wordpress>
 	Options Indexes FollowSymLinks MultiViews
 	AllowOverride None
 	Order allow,deny
